# ml_practice

./: .gitignore  01_Intro.ipynb  02_Data_selection.ipynb  02_Data_selection_and_preprocessing.ipynb  03_Data_analysis_and_preprocessing.ipynb  03_Data_analysis_and_visualization.ipynb  04_Model_selection_and_loss_functions.ipynb  04_data_preprocessing.ipynb  05_Model_selection_and_loss_functions.ipynb  05_Training_and_evaluation.ipynb  Intro.ipynb  README.md  TODO.md  pyproject.toml
