[tool.poetry]
name = "ml-practice"
version = "0.1.0"
description = ""
authors = ["eric-sclafani <eric.sclafani321@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_practice"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
ipdb = "^0.13.11"
ipykernel = "^6.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
